# aw-leaderboard-rust

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
rust/: Cargo.toml
rust/src/: db.rs  error.rs  main.rs  tests.rs
rust/templates/: error.html.hbs  home.html.hbs  login.html.hbs  profile.html.hbs  register.html.hbs
rust/templates/common/: footer.html.hbs  header.html.hbs
src/: db.rs  error.rs  main.rs  tests.rs
src/aw_leaderboard/: main.py  models.py  secrets.py
src/aw_leaderboard/db/: __init__.py  database.py  models.py
src/aw_leaderboard/routers/: leaderboard.py  users.py
src/endpoints/: auth.rs  devices.rs  mod.rs  user.rs  util.rs
static/: style.css
templates/: base.html.tera  error.html.hbs  error.html.tera  home.html.hbs  home.html.tera  index.html  login.html  login.html.hbs  login.html.tera  register.html.hbs  signup.html  signup.html.tera  user.html.hbs  user.html.tera  users.html.tera
templates/common/: head.html.hbs  head.html.tera  header.html.hbs  header.html.tera
tests/: test_empty.py
